[package]
name = "text-to-code"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.9.0"
leptess = "0.14.0"
prost = "0.13.4"
thiserror = "2.0.7"

[dependencies.axum]
version = "0.7.9"
features = ["macros", "multipart"]

[dependencies.tokio]
version = "1.42.0"
features = ["macros", "rt", "fs"]

[dependencies.tonic]
version = "0.12.3"
features = ["codegen", "prost"]

[dependencies.serde]
version = "1.0.216"
optional = true
features = ["derive"]

[build-dependencies.tonic-build]
version = "0.12.3"
features = ["prost"]

[build-dependencies]
